--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -92,11 +92,17 @@ aside {
 }
 
 footer {
-    clear: left;
-    position: relative;
-    height: 50px;
-    width: 100%;
+   
+
+    
+    border-top: 5px solid cadetblue;
     background-color: grey;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
 }
 
 p.copyright {
